--- a/Hacktopus/Hacktopus.ioc
+++ b/Hacktopus/Hacktopus.ioc
@@ -91,7 +91,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:/Users/Yoann/STM32Cube/Repository/STM32Cube_FW_L4_V1.6.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L432KCUx
